Updates from Overleaf

--- a/a10-euler.tex
+++ b/a10-euler.tex
@@ -49,7 +49,7 @@ $\sin^2 \theta + \cos^2 \theta = \dfrac{a^2}{c^2} + \dfrac{b^2}{c^2} = \dfrac{a^
 
 \begin{itemize}
 
-\item $\bm{i}$ is defined to be an imaginary number that has the property: $i^2 =-1$
+\item \boldmath{$i$} is defined to be an imaginary number that has the property: $i^2 =-1$
 \item \textbf{Complex Number} is a number that involves imaginary number(s) (e.g., $a = 5.6 + i\cdot4.3)$
 
 \item \textbf{Real Number} is a number that does not involve any imaginary number (e.g., $a = 13.4$)
