--- a/a11-cyclotomic-polynomial-integer-ring.tex
+++ b/a11-cyclotomic-polynomial-integer-ring.tex
@@ -42,7 +42,7 @@ In this section, we will explain the $\mu$-th cyclotomic polynomial over $X \in 
 \textbf{$\bm \mu$-th}&\multicolumn{2}{|c|}{}\\
 \textbf{Cyclotomic}&\multicolumn{2}{|c|}{}\\
 \textbf{Polynomial}&\multicolumn{2}{|c|}{}\\\hline
-\textbf{Finding}&For $\omega = e^{2 \pi i/ \mu}$, compute all $\omega^k$ such that&Find one satisfactory $\omega$ that is a root of\\
+\textbf{Finding}&For $\omega = e^{2 \pi i/ \mu}$, compute all ${\omega}^k$ such that&Find one satisfactory $\omega$ that is a root of\\
 \textbf{Primitive}&$0 < k < \mu $ and $\textsf{gcd}(k, \mu) = 1$&the $\mu$-th cyclotomic polynomial, and\\
 \textbf{$\bm \mu$-th}&(Theorem~\ref*{subsec:roots-theorem}.4 in \autoref{subsec:roots-theorem})&compute all $\omega^k \bmod p$ such that\\
 \textbf{Roots of}&&$0 < k < \mu $ and $\textsf{gcd}(k, \mu) = 1$\\
