--- a/a12-modulus-rescaling.tex
+++ b/a12-modulus-rescaling.tex
@@ -23,8 +23,8 @@ Now, suppose we want to rescale the modulo of the above congruence relations fro
 \centering
 \begin{tabular}{|l|l|l|}
 \hline
-Congruence  & Rescaled Congruence Relation & Rescaled Congruence Relation\\
-Relation & -- Exact & -- Approximate \\
+\textbf{Congruence}  & \textbf{Rescaled Congruence Relation} & \textbf{Rescaled Congruence Relation}\\
+\textbf{Relation} & \textbf{-- Exact} & \textbf{-- Approximate} \\
 \hline\hline
 $a \equiv b \bmod q$ & $\Bigg\lceil a\dfrac{q'}{q}\Bigg\rfloor \equiv \Bigg\lceil b\dfrac{q'}{q}\Bigg\rfloor \bmod q'$ & $\Bigg\lceil a\dfrac{q'}{q}\Bigg\rfloor \cong \Bigg\lceil b\dfrac{q'}{q}\Bigg\rfloor \bmod q'$\\
 &(if $q$ divides all of: $aq', bq'$)&(if $q$ does not divide:  $aq' \text{ or } bq'$)\\
