--- a/00-main.tex
+++ b/00-main.tex
@@ -349,10 +349,9 @@ Special thanks are extended to Robin Geelen (KU Leuven) for his thoughtful and d
 
 %\section{Background}
 
-
-\section{Decomposition}
-\label{sec:decomp}
-\input{a06-decomp}
+\section{Roots of Unity and Cyclotomic Polynomial over Integer Ring}
+\label{sec:cyclotomic-polynomial-integer-ring}
+\input{a11-cyclotomic-polynomial-integer-ring}
 
 
 
