Updates from Overleaf

--- a/b04-glwe.tex
+++ b/b04-glwe.tex
@@ -74,7 +74,7 @@ $ $
 \item $\textsf{GLWE}^{-1}_{S,\sigma}(C) = B - \sum\limits_{i=0}^{k-1}{(A_i \cdot S_i)} = \Delta  M + E \text{ } \in \mathcal{R}_{\langle n,q \rangle}$
 
 \item Scale down 
-$\Bigl\lceil \dfrac{ \Delta  M + E }{\Delta}\Bigl\rfloor \bmod t = M \text{ } \in \mathcal{R}_{\langle n, t \rangle}$
+$\Bigl\lceil \dfrac{ \Delta  M + E }{\Delta}\Bigr\rfloor \bmod t = M \text{ } \in \mathcal{R}_{\langle n, t \rangle}$
 
 \end{enumerate}
 
@@ -197,7 +197,7 @@ $\vec{D} = \vv{{\mathit{PK}}}_2 \cdot U + \vec{E}_2 \in \mathcal{R}_{\langle n,q
 \item $\textsf{GLWE}^{-1}_{S,\sigma}(C) = B - \vec{D} \cdot \vec{S} = \Delta  M + E_{\mathit{all}} \text{ } \in \mathcal{R}_{\langle n,q \rangle}$
 
 \item Scale down 
-$\Bigl\lceil \dfrac{ \Delta  M + E_{\mathit{all}} }{\Delta}\Bigl\rfloor = M  \text{ } \in \mathcal{R}_{\langle n, t \rangle}$
+$\Bigl\lceil \dfrac{ \Delta  M + E_{\mathit{all}} }{\Delta}\Bigr\rfloor = M  \text{ } \in \mathcal{R}_{\langle n, t \rangle}$
 
 \end{enumerate}
 
