Updates from Overleaf

--- a/d03-ckks.tex
+++ b/d03-ckks.tex
@@ -1662,7 +1662,7 @@ In the $\Delta M + E + q_0 K \bmod q_L$ term, notice that because of the $q_0K$ 
 \begin{figure}[h!]
     \centering
   \includegraphics[width=1.0\linewidth]{figures/modulo-reduction-sine.png}
-  \caption{Sine function $f(x) = \dfrac{q_0}{2\pi}\cdot \text{sin} \left(\dfrac{2\pi x}{q_0}\right)$ such that $f(\Delta m_i + e_i + q_0k_i) \approx \Delta m_i + e_i$ (provided $\Delta m_i + e_i \ll q_0$) \href{https://eprint.iacr.org/2018/153.pdf}{(Source)}}
+  \caption{Sine function $f(x) = \dfrac{q_0}{2\pi}\cdot \sin \left(\dfrac{2\pi x}{q_0}\right)$ such that $f(\Delta m_i + e_i + q_0k_i) \approx \Delta m_i + e_i$ (provided $\Delta m_i + e_i \ll q_0$) \href{https://eprint.iacr.org/2018/153.pdf}{(Source)}}
   \label{fig:modulo-reduction-sine}
 \end{figure}
 
