Updates from Overleaf

--- a/a01-modulo.tex
+++ b/a01-modulo.tex
@@ -55,13 +55,13 @@ This means that $a$ and $b$ are congruent modulo $q$ if and only if $a$ and $b$ 
 
 \item \textbf{Interchangeable:} Congruent values are interchangeable \revise{in modulo arithmetic}. 
 
-For example, suppose $(a \equiv b \bmod q)$ and $(c \equiv d \bmod q)$. Then, $a$ and $c$ are interchangeable, and $b$ and $d$ are interchangeable in modulo arithmetic as follows:
+For example, suppose $(a \equiv b \bmod q)$ and $(c \equiv d \bmod q)$. Then, $a$ and $b$ are interchangeable, and $c$ and $d$ are interchangeable in modulo arithmetic as follows:
 
-$(a + c) \equiv (c + d) \equiv (a + d) \equiv (b + c) \bmod q$
+$(a + c) \equiv (b + d) \equiv (a + d) \equiv (b + c) \bmod q$
 
-$(a - c) \equiv (c - d) \equiv (a - d) \equiv (b - c) \bmod q$
+$(a - c) \equiv (b - d) \equiv (a - d) \equiv (b - c) \bmod q$
 
-$(a \cdot c) \equiv (c \cdot d) \equiv (a \cdot d) \equiv (b \cdot c) \bmod q$
+$(a \cdot c) \equiv (b \cdot d) \equiv (a \cdot d) \equiv (b \cdot c) \bmod q$
 
 \end{enumerate}
 
