--- a/a09-matrix.tex
+++ b/a09-matrix.tex
@@ -166,7 +166,7 @@ $A = \begin{bmatrix}
 \vec{a}_{\langle 1, * \rangle} \\ 
 \vec{a}_{\langle 2, * \rangle} \\ 
 \vec{a}_{\langle 3, * \rangle} \\ 
-\vdots
+\vdots\\
 \vec{a}_{\langle m, * \rangle} \\ 
 \end{bmatrix}, \text{ } \vec{x} = (x_1, x_2, \cdots, x_{n})$
 
