integer ring --> ring

--- a/a05-polynomial-ring.tex
+++ b/a05-polynomial-ring.tex
@@ -55,7 +55,7 @@ $f' + f'' \equiv f_{r1} + f_{r2} \equiv f_{r3} \in \mathbb{Z}_q[x] / (x^n + 1)$
 To make the notation simple, we denote the polynomial ring $\mathbb{Z}_q[x] / (x^n + 1)$ as $\mathcal{R}_{\langle n, q \rangle}$
 \end{tcolorbox}
 
-Recall that in an integer ring $\mathbb{Z}_p$, a big number $b$ can be divided by $p$ and $b = q \cdot p + r \equiv r \bmod p$ (the quotient $q$ gets eliminated). Similarly, in a polynomial ring $\mathcal{R}_{\langle n, q \rangle}$, a high-degree polynomial $f_{big}$ can be divided by polynomial modulo $x^n + 1$, which gives:
+Recall that in a ring $\mathbb{Z}_p$, a big number $b$ can be divided by $p$ and $b = q \cdot p + r \equiv r \bmod p$ (the quotient $q$ gets eliminated). Similarly, in a polynomial ring $\mathcal{R}_{\langle n, q \rangle}$, a high-degree polynomial $f_{big}$ can be divided by a polynomial modulo $x^n + 1$, which gives:
 
 $f_{big} = (X^n + 1)\cdot(f_q) + f_r \equiv f_r \in \mathcal{R}_{\langle n, q \rangle}$
 
@@ -90,7 +90,7 @@ $ $
 %\noindent\adjustbox{max width=\columnwidth}{
 \begin{tabular}{|c||c|c|} % left align
 \hline
-&\textbf{Integer Ring} & \textbf {Polynomial Ring} \\
+&\textbf{Ring} & \textbf {Polynomial Ring} \\
 \hline
 \hline
 \textbf{{Set Elements}} & number & polynomial \\
