--- a/d02-bfv.tex
+++ b/d02-bfv.tex
@@ -1366,9 +1366,9 @@ $2^4 \equiv 8^4 \equiv 15^4 \equiv 9^4 \equiv 16 \equiv -1 \bmod{17}$
 
 $ $
 
-Definition~\ref*{subsec:cyclotomic-def} (in \autoref{subsec:cyclotomic-def}) states that the roots of the $\mu$-th cyclotomic polynomial are the primitive $\mu$-th roots of unity. And Definition~\ref*{subsec:roots-def} (in \autoref{subsec:roots-def}) states that the order of the primitive $\mu$-th roots of unity is $\mu$. These definitions apply to both the cyclotomic polynomials over $X\in\mathbb{C}$ (complex numbers) and the cyclotomic polynomials over $X \in \mathbb{Z}_t$ (integer ring). 
+Definition~\ref*{subsec:cyclotomic-def} (in \autoref{subsec:cyclotomic-def}) states that the roots of the $\mu$-th cyclotomic polynomial are the primitive $\mu$-th roots of unity. And Definition~\ref*{subsec:roots-def} (in \autoref{subsec:roots-def}) states that the order of the primitive $\mu$-th roots of unity is $\mu$. These definitions apply to both the cyclotomic polynomials over $X\in\mathbb{C}$ (complex numbers) and the cyclotomic polynomials over $X \in \mathbb{Z}_t$ (ring). 
 
-Since $\{2, 8, 15, 9\}$ are the roots of the $(\mu=8)$-th cyclotomic polynomial $X^4 + 1$ over the integer ring $\mathbb{Z}_{17}$, they are also the $(\mu=8)$-th primitive roots of unity of $\mathbb{Z}_{17}$. Therefore, their order (\autoref{subsec:order-def}) is $\mu=8$ as demonstrated as follows: 
+Since $\{2, 8, 15, 9\}$ are the roots of the $(\mu=8)$-th cyclotomic polynomial $X^4 + 1$ over the ring $\mathbb{Z}_{17}$, they are also the $(\mu=8)$-th primitive roots of unity of $\mathbb{Z}_{17}$. Therefore, their order (\autoref{subsec:order-def}) is $\mu=8$ as demonstrated as follows: 
 
 $2^8 \equiv 8^8 \equiv 15^8 \equiv 9^8 \equiv 1 \bmod 17$
 
