section files re-naming

--- a/00-main.tex
+++ b/00-main.tex
@@ -412,21 +412,21 @@ This chapter explains the basic mathematical components of number theory: group,
 
 \clearpage
 
-\section{Roots of Unity and Cyclotomic Polynomial over Integer Ring}
+\section{Roots of Unity and Cyclotomic Polynomial over Rings}
 \label{sec:cyclotomic-polynomial-integer-ring}
-\input{a11-cyclotomic-polynomial-integer-ring}
+\input{a09-cyclotomic-polynomial-integer-ring}
 
 \clearpage
 
 \section{Vector and Matrix}
 \label{sec:matrix}
-\input{a09-matrix}
+\input{a10-matrix}
 
 \clearpage
 
 \section{Euler's Formula}
 \label{sec:euler}
-\input{a10-euler}
+\input{a11-euler}
 
 \clearpage
 
