--- a/a09-cyclotomic-polynomial-integer-ring.tex
+++ b/a09-cyclotomic-polynomial-integer-ring.tex
@@ -10,7 +10,7 @@ In \autoref{sec:roots} and \autoref{sec:cyclotomic}, we learned about the defini
 
 In this section, we will explain the $\mu$-th cyclotomic polynomial over $X \in \mathbb{Z}_p$ (ring), which is structured as follows: 
 
-\begin{tcolorbox}[title={\textbf{\tboxdef{\ref*{sec:cyclotomic-polynomial-integer-ring}} Roots of Unity and Cyclotomic Polynomial over Ring $\mathbb{Z}_p$}}]
+\begin{tcolorbox}[title={\textbf{\tboxdef{\ref*{sec:cyclotomic-polynomial-integer-ring}} Roots of Unity and Cyclotomic Polynomial over Rings $\mathbb{Z}_p$}}]
 
 
 \begin{itemize}
