--- a/a11-euler.tex
+++ b/a11-euler.tex
@@ -231,7 +231,7 @@ $\sum\limits_{k=0}^{n-1} \omega^{2k} \neq \sum\limits_{k=0}^{n-1} \omega^{4k} \n
 
 
 
-\subsection{Vandermonde Matrix with Roots of a Cyclotomic Polynomial over Rings ($\mathbb{Z}_p$)}
+\subsection{Vandermonde Matrix with Roots of Cyclotomic Polynomial over Rings ($\mathbb{Z}_p$)}
 \label{subsec:vandermonde-euler-integer-ring}
 
 Theorem~\ref*{subsec:vandermonde-euler} (in \autoref{subsec:vandermonde-euler}) showed that $V \cdot V^T = n \cdot I^R_n$, where $V$ is the Vandermonde matrix $V = \mathit{Vander}(x_0, x_1, \cdots, x_{n-1})$, where each $x_i$ is the primitive $\mu$-th root of unity over $X \in \mathbb{C}$ (i.e., complex number) and $\mu$ is a power of 2. In this subsection, we will show that the relation $V \cdot V^T = n \cdot I^R_n$ holds even if each $x_i$ is the primitive $\mu$-th root of unity over $X \in \mathbb{Z}_p$ (i.e., ring). In particular, we will prove Theorem~\ref*{subsec:vandermonde-euler}: 
